@@ -47,7 +47,8 @@ routines	:=							      \
 	libc_fatal fmemopen
 
 tests = tst_swprintf tst_wprintf tst_swscanf tst_wscanf tst_getwc tst_putwc   \
-	tst_wprintf2 tst-widetext test-fmemopen tst-ext tst-fopenloc
+	tst_wprintf2 tst-widetext test-fmemopen tst-ext tst-fopenloc	      \
+	tst-fgetws
 test-srcs = test-freopen
 
 all: # Make this the default target; it will be defined in Rules.
@@ -82,6 +83,7 @@ tst_wprintf2-ARGS = "Some Text"
 tst-widetext-ENV = LOCPATH=$(common-objpfx)localedata LANGUAGE=C
 tst-fopenloc-ENV = LOCPATH=$(common-objpfx)localedata \
 		   MALLOC_TRACE=$(objpfx)tst-fopenloc.mtrace
+tst-fgetws-ENV = LOCPATH=$(common-objpfx)localedata LANGUAGE=C
 
 generated = tst-fopenloc.mtrace tst-fopenloc.check
 
